instalaciones/kubernete/Azure AKS/ingress-aks.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: jenkins.5bba6d77660b4868b18d.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: jenkins-master-svc
          servicePort: 80
        path: /
